--- a/_includes/layouts/ticket.njk
+++ b/_includes/layouts/ticket.njk
@@ -2,8 +2,6 @@
 layout: layouts/base.njk
 ---
 
-{%- css %}{% include "public/css/ticket.css" %}{% endcss %}
-
-<div class="flex-column" data-pagefind-body>
+<div class="flex-col" data-pagefind-body>
   {{ content | safe }}
 </div>
