--- a/content/index.njk
+++ b/content/index.njk
@@ -1,7 +1,18 @@
 ---
-layout: layouts/wiki.njk
-breadcrumb: WikiStart
+layout: layouts/base.njk
 ---
 
-<h2>The jQuery Plugin Registry is in read-only mode.</h2>
-<h2>New plugin releases will not be processed.</h2>
+<div class="flex flex-col">
+  <div class="text-center bg-[url(/img/dark-grey-tile.png)] p-8 lg:py-12">
+    <h1 class="text-white">The jQuery Plugin Registry</h1>
+  </div>
+
+  <div class="py-5 px-6 text-center flex flex-col gap-2">
+    <h2>This site is a static archive of the old jQuery Plugin Registry.</h2>
+    <h3>New plugin releases will not be processed.</h3>
+    <hr/>
+    <p>The jQuery Plugin Registry is preserved for historical purposes, and search is still supported.</p>
+    <p>However, we do not recommend using any plugins from this registry. Please find jQuery plugins on <a href="https://www.npmjs.com/search?q=keywords:jquery-plugin">npm.</a>
+    </p>
+  </div>
+</div>
