feat: add package-manifest page, construct plugin/tags data

--- a/content/index.njk
+++ b/content/index.njk
@@ -3,7 +3,7 @@ layout: layouts/base.njk
 ---
 
 <div class="text-center bg-[url(/img/dark-grey-tile.png)] p-8 lg:py-12">
-  <h1 class="text-white">The jQuery Plugin Registry</h1>
+  <h1 class="text-white lg:text-6xl">The jQuery Plugin Registry</h1>
 </div>
 
 <div class="flex flex-col lg:flex-row-reverse">
