--- a/_includes/layouts/base-sidebar.njk
+++ b/_includes/layouts/base-sidebar.njk
@@ -7,7 +7,7 @@ layout: layouts/base.njk
     {{ content | safe }}
   </div>
 
-  <div class="flex flex-col py-5 lg:w-[300px] bg-[radial-gradient(ellipse_at_right,#f2f2f2,#ffffff_80%)]">
+  <div class="flex flex-col py-5 shrink-0 lg:w-[300px] bg-[radial-gradient(ellipse_at_right,#f2f2f2,#ffffff_80%)]">
     <h3 class="flex py-3 px-5 flex-row items-center gap-2 mb-3 bg-gradient-to-r from-[#efefef] to-[#f3f3f3]">
       {% include "icons/tag.svg" %}
       Tags
@@ -16,7 +16,7 @@ layout: layouts/base.njk
       {% for tag in pluginTags | head(10) %}
         <li>
           <a class="link-sidebar" href="/tag/{{ tag.name | slugify }}">{{ tag.name }}</a>
-          <span class="count">({{ tag.plugins.length }})</span>
+          <span class="count">({{ tag.count }})</span>
         </li>
       {% endfor %}
     </ul>
