--- a/content/index.njk
+++ b/content/index.njk
@@ -2,8 +2,8 @@
 layout: layouts/base.njk
 ---
 
-<div class="text-center bg-[url(/img/dark-grey-tile.png)] p-8 lg:py-12">
-  <h1 class="text-white lg:text-6xl">The jQuery Plugin Registry</h1>
+<div class="text-center bg-dark-tiles p-8 lg:py-12">
+  <h1 class="text-white text-4xl lg:text-6xl">The jQuery Plugin Registry</h1>
 </div>
 
 <div class="flex flex-col lg:flex-row-reverse">
