--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -11,12 +11,12 @@
   <body class="flex flex-col h-full items-center">
     <a href="#skip" class="sr-only">Skip to main content</a>
     {% include "header.njk" %}
-    <div class="p-4 grow w-full max-w-screen-xl">
-      <a href="/" class="inline-block mt-8 mb-6">
+    <div class="flex flex-col w-full grow p-4 max-w-screen-xl">
+      <a href="/" class="self-center lg:self-start inline-block mt-8 mb-6">
         <img alt="jQuery Logo" src="/img/logo-white.svg" width="233" height="66"/>
       </a>
       {% include "search.njk" %}
-      <main id="skip" class="flex flex-col w-full mt-4 -mb-4 relative shadow-[-3px_0_5px_-3px_rgb(0,0,0,0.8),3px_0_5px_-3px_rgb(0,0,0,0.8)] bg-white rounded-xl lg:rounded-t-none overflow-hidden lg:mt-0">
+      <main id="skip" class="relative flex flex-col w-full mt-4 -mb-4 shadow-[-3px_0_5px_-3px_rgb(0,0,0,0.8),3px_0_5px_-3px_rgb(0,0,0,0.8)] bg-white rounded-xl lg:rounded-t-none overflow-hidden lg:mt-0">
         {{ content | safe }}
       </main>
     </div>
