--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,3 +1,6 @@
+---
+---
+
 <!doctype html>
 <html lang="{{ metadata.language }}" class="bg-background h-full">
   <head>
@@ -7,6 +10,20 @@
     <meta name="description" content="{{ description or metadata.description }}">
     {% favicon './public/favicon.svg' %}
     <link rel="stylesheet" href="/style.css?v={% version %}"/>
+    {# Insert styles dependent on path prefix here #}
+    <style type="text/css">
+      @font-face {
+        font-family: Cairo;
+        src: url("/fonts/Cairo/Cairo-Bold.ttf") format("truetype");
+        font-weight: bold;
+      }
+      .bg-dark-tiles {
+        background-image: url("/img/dark-grey-tile.png");
+      }
+      .pagefind-ui__form:after {
+        background: url("/img/search.svg") no-repeat 2px center;
+      }
+    </style>
   </head>
   <body class="flex flex-col h-full items-center">
     <a href="#skip" class="sr-only">Skip to main content</a>
