--- a/_includes/menu.njk
+++ b/_includes/menu.njk
@@ -1,7 +1,7 @@
 <nav class="fixed top-[34px] inset-x-0 bottom-0 bg-gray-dark text-white py-4 lg:relative lg:inset-auto lg:bg-transparent lg:p-0 lg:opacity-100 lg:transform-none peer-checked/menu:opacity-100 peer-checked/menu:transform-none opacity-0 translate-x-full transition-[opacity,transform] overflow-y-auto lg:overflow-visible">
   <ul class="lg:flex lg:flex-row lg:border-l lg:border-l-white/10 lg:border-r lg:border-r-gray-dark">
     <li>
-      <a href="https://plugins.jquery.com/" class="link-nav">Plugins</a>
+      <a href="/" class="link-nav">Plugins</a>
     </li>
     <li class="dropdown">
       <a href="https://contribute.jquery.org/" class="link-nav">Contribute</a>
