--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -14,14 +14,14 @@
     <style type="text/css">
       @font-face {
         font-family: Cairo;
-        src: url("/fonts/Cairo/Cairo-Bold.ttf") format("truetype");
+        src: url({{ '/fonts/Cairo/Cairo-Bold.ttf' | url }}) format("truetype");
         font-weight: bold;
       }
       .bg-dark-tiles {
-        background-image: url("/img/dark-grey-tile.png");
+        background-image: url({{ '/img/dark-grey-tile.png' | url }});
       }
       .pagefind-ui__form:after {
-        background: url("/img/search.svg") no-repeat 2px center;
+        background: url({{ '/img/search.svg' | url }}) no-repeat 2px center;
       }
     </style>
   </head>
