fix(base): add bullet style with url filter

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -23,6 +23,9 @@
       .pagefind-ui__form:after {
         background: url({{ '/img/search.svg' | url }}) no-repeat 2px center;
       }
+      .list-custom-bullet {
+        list-style-image: url({{ '/img/bullet.png' | url }});
+      }
     </style>
   </head>
   <body class="flex flex-col h-full items-center">
