feat(plugin): add warning banner to plugin pages

--- a/content/index.njk
+++ b/content/index.njk
@@ -12,7 +12,7 @@ layout: layouts/base.njk
     <p>New plugin releases will not be processed.</p>
     <hr/>
     <p>The jQuery Plugin Registry is preserved for historical purposes. Search is still supported.</p>
-    <p class="italic">We do not recommend using any plugins from this registry. Please find jQuery plugins on <a href="https://www.npmjs.com/search?q=keywords:jquery-plugin">npm</a>.</p>
+    <p class="italic">We do not recommend using any versions of plugins from this registry. Please find jQuery plugins on <a href="https://www.npmjs.com/search?q=keywords:jquery-plugin">npm</a>.</p>
   </div>
 
   <div class="flex flex-col px-6 py-5 lg:w-[300px]">
