--- a/content/plugin.njk
+++ b/content/plugin.njk
@@ -15,6 +15,7 @@
             ...plugin,
             current: post.version,
             date: post.date,
+            download_url: post.download_url,
             postName: post.name
           }
         }).concat({
