--- a/content/plugin.njk
+++ b/content/plugin.njk
@@ -106,7 +106,7 @@
     </div>
   </div>
 
-  <div class="flex flex-col w-full bg-sidebar-gradient gap-4 pl-5 border-l border-l-white-dark max-w-[330px]">
+  <div class="flex flex-col w-full bg-sidebar-gradient gap-4 border-l border-l-white-dark lg:pl-5 lg:max-w-[330px]">
 
     <div class="w-full rounded-lg border border-black bg-black shadow-[0_0_5px_rgba(0,0,0,0.5)]">
       <div class="flex flex-col w-full border border-gray-light rounded-lg bg-[#202020] text-white font-bold font-serif">
