fix(menu): js.foundation -> openjsf.org; add link jQuery team

--- a/_includes/menu.njk
+++ b/_includes/menu.njk
@@ -50,22 +50,25 @@
       </ul>
     </li>
     <li class="dropdown">
-      <a href="https://js.foundation/" class="link-nav">JS Foundation</a>
+      <a href="https://openjsf.org/" class="link-nav">JS Foundation</a>
       <ul class="pl-4 lg:p-0">
         <li>
-          <a href="https://js.foundation/about/join" class="link-nav">Join</a>
+          <a href="https://openjsf.org/join" class="link-nav">Join</a>
         </li>
         <li>
-          <a href="https://js.foundation/about/members" class="link-nav">Members</a>
+          <a href="https://openjsf.org/members" class="link-nav">Members</a>
         </li>
         <li>
-          <a href="https://js.foundation/about/leadership" class="link-nav">Leadership</a>
+          <a href="https://jquery.com/team" class="link-nav">jQuery Team</a>
         </li>
         <li>
-          <a href="https://js.foundation/community/code-of-conduct" class="link-nav">Conduct</a>
+          <a href="https://openjsf.org/governance" class="link-nav">Governance</a>
         </li>
         <li>
-          <a href="https://js.foundation/about/donate" class="link-nav border-b-0">Donate</a>
+          <a href="https://code-of-conduct.openjsf.org/" class="link-nav">Conduct</a>
+        </li>
+        <li>
+          <a href="https://openjsf.org/about/project-funding-opportunities/" class="link-nav border-b-0">Donate</a>
         </li>
       </ul>
     </li>
