--- a/content/plugin.njk
+++ b/content/plugin.njk
@@ -36,10 +36,13 @@
 }
 ---
 
+{% if plugin.latest == undefined %}
+<div class="flex flex-col gap-5 py-5 px-6 lg:flex-row" data-pagefind-body>
+{% else %}
 <div class="flex flex-col gap-5 py-5 px-6 lg:flex-row">
-
+{% endif %}
   <div class="flex flex-col gap-2 grow">
-    <div class="flex flex-row justify-center gap-1 mb-3 p-4 text-center bg-warning rounded">
+    <div class="flex flex-row justify-center gap-1 mb-3 p-4 text-center bg-warning rounded" data-pagefind-ignore>
       <div class="pt-px">
         {% include "icons/warning.svg" %}
       </div>
@@ -79,7 +82,7 @@
 
     <hr/>
 
-    <div class="flex flex-col gap-2">
+    <div class="flex flex-col gap-2" data-pagefind-ignore>
       <h2>Versions</h2>
       <div class="flex flex-col rounded-lg overflow-hidden border border-border">
         <div class="grid grid-cols-2 lg:grid-cols-3 bg-dark-tiles text-white text-xs uppercase py-1 px-2 font-bold">
@@ -122,7 +125,7 @@
           </div>
         </div>
 
-        <div class="flex flex-col gap-4 bg-dark-tiles py-3 px-4">
+        <div class="flex flex-col gap-4 bg-dark-tiles py-3 px-4" data-pagefind-ignore>
           <a class="btn w-full text-white text-xl flex flex-row items-center gap-1 p-1 border border-[#e1b68c] bg-[#d18f4f] hover:bg-[#cc8540] rounded" href="{{ plugin.download_url }}">
             {% include "icons/download.svg" %}
             Download now
@@ -155,7 +158,7 @@
       </div>
     </div>
 
-    <div class="flex flex-col gap-3">
+    <div class="flex flex-col gap-3" data-pagefind-ignore>
       <h3 class="flex flex-row items-center gap-2 bg-sidebar-header-gradient py-3 px-5 -mx-5">
         {% include "icons/github.svg" %}
         GitHub Activity
